--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,11 @@ setuptools==65.5.0
 six==1.17.0
 legacy-cgi==2.6.3
 pytest==8.3.5
+langchain==0.3.25
+langchain-community==0.3.24
+langchain-deepseek==0.1.3
+langchain-anthropic==0.3.15
+langchain-google-genai==2.1.5
+ipykernel==6.29.5
+openai==1.82.1
+loguru==0.7.3
