--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,13 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: '3.11'
 
       - name: Build and Test Projects
         run: |
@@ -35,9 +35,7 @@ jobs:
             elif [ -f "$dir/requirements.txt" ]; then
               echo "Testing Python project in $dir"
               (cd "$dir" && \
-               pip install -r requirements.txt && \
-               pip install pytest pytest-cov && \
-               pytest --cov=src --cov-report=xml)
+               pip install -r requirements.txt)
             else
               echo "Skipping $dir — no build config found."
             fi
