--- a/LLM_experiments/java/results_gpt-4.1/solution_try_1/pom.xml
+++ b/LLM_experiments/java/results_gpt-4.1/solution_try_1/pom.xml
@@ -8,6 +8,8 @@
   <properties>
     <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
+    <sonar.organization>asiaszych</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
   </properties>
   <dependencies>
     <dependency>
