update sonar properties file

--- a/LLM_experiments/java/results_gpt-4.1/solution_try_1/sonar-project.properties
+++ b/LLM_experiments/java/results_gpt-4.1/solution_try_1/sonar-project.properties
@@ -1,5 +1,6 @@
 # SonarCloud project settings
-sonar.projectKey=AsiaSzych_Tree_of_Life_GPT_try1
+sonar.projectKey=AsiaSzych_Tree_of_Life
+sonar.branch.name=java_gpt_1
 sonar.organization=asiaszych
 sonar.host.url=https://sonarcloud.io
 
