update source pattern

--- a/LLM_experiments/python/results_gpt-4.1/solution_try_3/sonar-project.properties
+++ b/LLM_experiments/python/results_gpt-4.1/solution_try_3/sonar-project.properties
@@ -5,6 +5,6 @@ sonar.organization=asiaszych
 sonar.host.url=https://sonarcloud.io
 
 # Source configuration
-sonar.sources=.,src
+sonar.sources=.
 sonar.exclusions=**/__pycache__/**,**/*.md,**/*.txt
 sonar.python.version=3.11
